--- a/Module08/Module08/Web.config
+++ b/Module08/Module08/Web.config
@@ -5,6 +5,14 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="nw" connectionString="server=(localdb)\mssqllocaldb; database=northwind; trusted_connection=true"
+        providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  
+  
+  
+  
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
